fix text position in main page

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
 
           <div class="formBody">
            <div class="row">
+
              <div class="col-sm-6">
                <div class="col-xl-8 offset-xl-2 py-5">
 
@@ -420,8 +421,8 @@
   <!-- ================================= End MODALS ================================= -->
 
         <!-- Script Javascript -->
-        <script src="bootstrap/js/plugins.js"></script>
-        <script src="bootstrap/js/main.js"></script>
+        <!-- <script src="bootstrap/js/plugins.js"></script> -->
+        <!-- <script src="bootstrap/js/main.js"></script> -->
 		    <script src="bootstrap/js/bootstrap.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
