--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
           <!-- SECTION ACCUEIL  -->
            <section id="mainsection" class="section">
+             <div class ="linkToFeedback" onclick="location.href='#page3';"></div>
              <div id="typewriter" class="auto_write"></div>
             </section>
 
