metions legales add

--- a/index.html
+++ b/index.html
@@ -17,16 +17,12 @@
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
         <!-- Custom style -->
         <link rel="stylesheet" href="css/zoomGlass.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/design.css">
-        <!-- <link rel="stylesheet" href="css/slideshow.css"> -->
         <link rel="stylesheet" href="css/turn.css">
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
         <!-- liens vers pagepiling effet-->
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
 
@@ -101,6 +97,10 @@
 
         <div class="section" id="feedback">
          <section id="feedbackSection">
+
+            <div id=scrabble class="scrabble">
+            <img class="mentionLegal" onclick="location.href='docs/ML.pdf';" src="img/ML2.png"/>
+          </div>
 
            <div id ="bookFeedbackID" class="bookFeedback">
              <img class="magniflier" src="img/BookWithTextImg.png"/>
