Js error correction

--- a/index.html
+++ b/index.html
@@ -388,23 +388,22 @@
   <!-- ================================= End MODALS ================================= -->
 
         <!-- Script Javascript -->
-        <!-- <script src="bootstrap/js/plugins.js"></script> -->
+        <script src="bootstrap/js/jquery-3.3.1.js"></script>
         <!-- <script src="bootstrap/js/main.js"></script> -->
-		    <script src="bootstrap/js/bootstrap.js"></script> -->
+		    <!-- <script src="bootstrap/js/bootstrap.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
         <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="js/zoomEffect.js"></script>
-        <script src="js/validate.js"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+        <!-- <script src="js/validate.js"></script> -->
         <script src="js/core.js"></script>
 
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
-
-
 
         <script type='text/javascript'>
           const typewriter = new Typewriter('#typewriter', {
@@ -445,7 +444,7 @@
             });
         </script>
 
-        <script>
+        <!-- <script>
           $(function () {
             // init the validator
             // validator files are included in the download package
@@ -482,6 +481,6 @@
                 }
             })
         });
-        </script>
+        </script> -->
     </body>
 </html>
